--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^5.2.16",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.19.0",
@@ -17,6 +18,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-screens": "^2.10.1",
+    "react-native-tab-view": "^2.15.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0"
   },
